--- a/Plugins/MetaPlayer/MetaPlayer.uplugin
+++ b/Plugins/MetaPlayer/MetaPlayer.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "MetaPlayer",
 	"Description": "",
-	"Category": "MediaPlayer",
+	"Category": "Meta",
 	"CreatedBy": "PoSTMEDIA",
 	"CreatedByURL": "",
 	"DocsURL": "",
